# CLT-CLEVER-KVM

./: .gitignore  BUILD.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODEC_INFO.md  ENHANCED_WEBM_ENCODING.md  FINAL_COMMIT_AND_PR.md  PR_DESCRIPTION.md  PULL_REQUEST_DESCRIPTION.md  README.md  SERVER_STOP_FIX.md  UPDATER.md  WEBM_YUV420_ENHANCEMENT.md  package-lock.json  package.json  test-client.html  test-vp8-only.html  vite.config.js
.github/workflows/: build.yml  debug-macos-build.yml  pr_build.yml  release-fallback.yml  release.yml
docs/: BUILD.md  CHANGELOG.md
scripts/: build-macos-universal.sh  build.bat  build.sh  fix-ffmpeg.bat  fix-ffmpeg.sh  prepare-release.sh  setup-github-secrets.sh  test-updater.sh
src/: App.vue  README.md  index.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: README.md  audio.rs  capture.rs  codec.rs  codec_pure.rs  input.rs  logging.rs  main.rs  server.rs  system_check.rs  utils.rs
src-tauri/src/app/: commands.rs  mod.rs  state.rs
src-tauri/src/audio/: engine.rs  mod.rs
src-tauri/src/core/: capture.rs  mod.rs
src-tauri/src/lib/: constants.rs  error_types.rs  mod.rs
src-tauri/src/network/server/: handlers.rs  mod.rs  models.rs  websocket.rs
src-tauri/src/server/: handlers.rs  mod.rs  models.rs  server.rs  webrtc_handler.rs  websocket.rs  websocket_old.rs
src-tauri/src/streaming/: mod.rs  ultra_low_latency.rs  ultra_stream.rs
src-tauri/src/streaming/codecs/: mod.rs  realtime_codec.rs  yuv420_encoder.rs
src-tauri/src/streaming/enhanced/: enhanced_audio.rs  enhanced_video.rs  enhanced_video_vp8.rs  mod.rs  ultra_low_latency.rs
src-tauri/src/streaming/handlers/: integrated_handler.rs  mod.rs  realtime_stream.rs  ultra_stream.rs
src-tauri/src/system/: mod.rs  system_optimizer.rs
src-tauri/web-client/: index.html  kvm-client.css  kvm-client.js  kvm-template-parts.js  kvm-template.html
src/components/: AdvancedSettings.vue  ConnectionOptions.vue  PresetSelector.vue  ServerConfiguration.vue  ServerStatus.vue  TabContainer.vue  UpdateChecker.vue  index.js
src/components/server/: ConnectionOptions.vue  LogViewer.vue  ServerConfiguration.vue  index.js
src/components/ui/: index.js
src/components/update/: UpdaterDialog.vue  index.js
src/composables/: index.js  useServer.js
src/constants/: index.js  presets.js
