[package]
name = "clever-kvm"
version = "0.1.0"
description = "A remote desktop system with KVM functionality"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all", "dialog-all", "notification-all", "fs-all", "process-all", "global-shortcut-all", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
futures = "0.3"
screenshots = "0.8"
image = "0.24"
base64 = "0.21"
enigo = "0.1"
scrap = "0.5"
local-ip-address = "0.5"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
axum = { version = "0.7", features = ["ws", "http2"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
webrtc = "0.9"
aes-gcm = "0.10"
zstd = "0.13"
hyper = { version = "1.2", features = ["full"] }
bincode = "1.3"

[features]
# This is recommended by Tauri for release builds
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
