[package]
name = "clever-kvm"
version = "1.0.0"
description = "A KVM solution built with Tauri"
authors = ["Clever Technologies"]
license = "MIT"
repository = "https://github.com/CLTSG/CLT-CLEVER-KVM"
homepage = "https://github.com/CLTSG/CLT-CLEVER-KVM"
documentation = "https://github.com/CLTSG/CLT-CLEVER-KVM#readme"
keywords = ["kvm", "remote-desktop", "tauri", "vp8", "streaming"]
categories = ["multimedia", "network-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "fs-all", "dialog-all", "notification-all", "process-all", "os-all", "global-shortcut-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
image = "0.24.7"
scrap = "0.5.0"
axum = { version = "0.7.2", features = ["ws"] }
futures-util = "0.3.28"
base64 = "0.21.4"
aes-gcm = "0.10.3"
rand = "0.8.5"
uuid = { version = "1.5.0", features = ["v4"] }
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"
enigo = "0.1.3"
local-ip-address = "0.5.6"
zstd = "0.13.0"
bincode = "1.3.3"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
lazy_static = "1.4.0"
dirs = "5.0.1"
bytes = "1.5.0"
gethostname = "0.4.3"

# Use a more recent version of ffmpeg-next for better API stability
ffmpeg-next = "7.0"
webrtc = "0.9.0"
display-info = "0.4.3"
anyhow = "1.0.75"
thiserror = "1.0.50"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
