[package]
name = "clever-kvm"
version = "1.1.1"
description = "A KVM solution built with Tauri"
authors = ["Clever Technologies"]
license = "MIT"
repository = "https://github.com/CLTSG/CLT-CLEVER-KVM"
homepage = "https://github.com/CLTSG/CLT-CLEVER-KVM"
documentation = "https://github.com/CLTSG/CLT-CLEVER-KVM#readme"
keywords = ["kvm", "remote-desktop", "tauri", "vp8", "streaming"]
categories = ["multimedia", "network-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "fs-all", "dialog-all", "notification-all", "process-all", "os-all", "global-shortcut-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.7.2", features = ["ws"] }
futures-util = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"
enigo = "0.1.3"
local-ip-address = "0.5.6"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
lazy_static = "1.4.0"
gethostname = "0.4.3"

# Ultra-performance dependencies for streaming
webrtc = "0.11.0"
xcap = "0.0.10"
anyhow = "1.0.75"
thiserror = "1.0.50"

# Ultra-high performance dependencies for optimization
parking_lot = "0.12" # High-performance locks (replaces std::sync::Mutex)
rayon = "1.8" # Data parallelism for SIMD and multi-core processing
mimalloc = { version = "0.1", optional = true } # Microsoft's high-performance allocator

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Ultra-performance features
default = ["mimalloc"] # Use Microsoft's allocator by default for best performance
ultra-performance = ["mimalloc"] # Enable all performance optimizations
